# econ_comm_analysis

./: Makefile  README.md  pyproject.toml
docs/: TOOLS.md
examples/: __init__.py  direct_extraction_example.py  socratic_extraction_example.py  test_api.py
notebooks/professional_profiler/: llm_extraction.ipynb  name_normalization_fix.ipynb  parsing_html.ipynb  test.ipynb  test_wikipedia_api.ipynb
src/argumentation_mining/: README.md  __init__.py  main.py
src/argumentation_mining/pipelines/direct_extraction/: __init__.py  direct_extraction.py  prompt.yaml
src/argumentation_mining/pipelines/socratic_extraction/: __init__.py  socratic_extraction.py
src/argumentation_mining/pipelines/socratic_extraction/prompts/: prompt_1.yaml  prompt_2.yaml
src/argumentation_mining/utils/: __init__.py  logger.py  openai_calls.py  output_formatter.py
src/article_processing_pipeline/: README.md  run_pipeline.py
src/article_processing_pipeline/modules/: authors.py  clean_dataset.py  deduplicate.py  make_dataset.py  tags.py
src/professional_profiler/: README.md  requirements.txt
src/professional_profiler/config/: app.yaml  logging.yaml  prompt.txt
src/professional_profiler/config/parsing/: degree_pattern.txt  keywords.txt  loose_degree.txt  section_blacklist.txt
src/professional_profiler/logs/: profiler.log.1
src/professional_profiler/professional_profiler/: __main__.py  config.py
src/professional_profiler/professional_profiler/extraction/: __main__.py  llm.py  pydantic_class.py
src/professional_profiler/professional_profiler/logging/: logger.py
src/professional_profiler/professional_profiler/parsing/: __main__.py  constants.py  extractors.py  formatter.py  utils.py
src/professional_profiler/professional_profiler/scraping/: __main__.py  wikipedia_search.py
src/proquest_scraping/: README.md  webScrapingFinal.ipynb
